                             ALPHA 15.2 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 15.2 (??/??/????)
Current Level Cap: 25
- - - - - - - - - - - - -
Yet another hotfix! There were no game-breaking bugs that needed to be fixed, but there's a few useful QoL additions/changes.

Additions:
 - Added 2 new items:
  ~ Scrap of Big Mouth's Cape
  ~ Scrap of Smart Mouth's Cape
 - Added 3 new Trailia statues.
 - Discord rich presence will also show battle details.

Changes:
 - Increased initial levels of Player 3 from 3 → 4 and Player 4 from 4 → 5.
 - Swapped Foresight and Offensive Stance learn levels.

Bug Fixes:
 - Fixed EXP Suppressor hiding party members from victory screen.
 - Fixed Rainbow Slime not changing color.
 - Fixed a bug where typing on the rename screen could take screenshots.
 - Fixed a bug where the screenshot folder wouldn't open if a screenshot hadn't been taken yet.
 - Fixed a bug where the switch for Laeryidyean's guaranteed Darkfire wouldn't reset when retrying the battle.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 15.1 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 15.1 (2/4/2025)
Current Level Cap: 25
- - - - - - - - - - - - -
Here's a quick hotfix, only a day after Alpha 15's release! Yeah, it turns out there was a bug that prevented any progress past the Mini Green Slime... oops.

Additions:
 - More screenshot-related features:
  ~ Pressing P takes a screenshot; before it only worked with PRINTSCREEN. This can be rebound in the options menu.
  ~ The screenshot folder can be accessed via the title screen.
  ~ Screenshots will now also hide the time indicator.

Changes:
 - Infernal Coin also applies fire elemental rates.
 - On Fire! and Burning Up! take increased damage from Water/Earth/Wind attacks, and the fire will be put out.

Bug Fixes: