@@ -710,7 +710,7 @@
     "Capture Player Y",
     "API Key <Global Meta>",
     "API Data <Global Meta>",
-    "",
+    "Leaderboard <Global Meta>",
     "",
     "",
     "",
