@@ -7,6 +7,7 @@ Current Level Cap: 25
 Yet another hotfix! There were no game-breaking bugs that needed to be fixed, but there's a few useful QoL additions/changes.
 
 Additions:
+ - Added leaderboards for Bits, Damage Dealt, and Playtime.
  - Added 2 new items:
   ~ Scrap of Big Mouth's Cape
   ~ Scrap of Smart Mouth's Cape
